message GS_C_Register_Or_Login{
	required string account = 1;	//账户
	required string password = 2;	//密码
	required int32 partner = 3;	//客户端来源渠道ID
	required int32 type = 4;	//账户类型 比如从各个平台来的客户  官方注册 官方游客
	//optional string email = 3;
}